# meuantivirus

./: .gitattributes  .gitignore  IMPROVEMENTS_v2.md  REDESIGN_EXECUTIVE_SUMMARY.md  REDESIGN_IMPLEMENTATION_CODE.md  REDESIGN_VISUAL_ANALYSIS.md  SentinelaPC.spec  browser_integration.py  main.py  pyrightconfig.json  requirements.txt
app/: __init__.py
app/core/: risk.py  (+4 more)
installer/: CHECKLIST_POS_INSTALACAO.md  DISTRIBUICAO_WINDOWS.md  SentinelaPC.iss  build_exe.ps1  build_installer.ps1  requirements-build.txt  verify_install.ps1  version-info.txt
logs/: audit-resolution-debug-20260404-154416.txt  audit-resolution-debug-20260404-154847.txt  audit-resolution-debug-20260404-154932.txt  audit-resolution-debug-20260404-154943.txt  browser-resolution-guide-20260404-205217.txt
mobile/: main.py  pyproject.toml
quarantine/: 20260404-192013_1KIZ_56affebc1673.js  20260404-192013_1MtE_61c4b4b36125.bat  20260404-192013_1iaT_d3c83e31476d.js  20260404-192013_2fRv_3e9732029118.bat  20260404-192013_3dd2d796-ec89-42ef-9559-b4f0ffcc9145.tmp_2ce37525fd96.js  20260404-192013_49429f60-dc64-4f57-9544-668b778a2846.tmp_aecfcc6d17c3.js  20260404-192013_4TBN_aa78ede1f328.bat  20260404-192013_65WF_f489c1642b6a.bat  20260404-192013_7CzJ_73b923347d0d.js  20260404-192013_8v2a_6fc63d1f20f5.js  20260404-192013_8wyc_71b0c0d3ecfc.js  20260404-192013_BOMl_e0ddbf75358f.ps1  20260404-192013_D5iM_f58a36d1b6a3.bat  20260404-192013_D8PD_b729822144ae.js  20260404-192013_HnpG_562292f12724.ps1  20260404-192013_ImY9_c81af88976ce.js  20260404-192013_J7nb_36132a06a11c.ps1  20260404-192013_K1Ak_674d5fb56897.js  (+978 more)
(+342 files in other folders)
