[project]
name = "sentinela-mobile"
version = "1.2.0"
description = "Sentinela Mobile"
requires-python = ">=3.11"
dependencies = [
  "flet>=0.24.0",
]

[tool.flet]
org = "com.sentinelamobile"
product = "Sentinela Mobile"
company = "Sentinela Mobile"

[tool.flet.app]
path = "."
assets = "assets"

[tool.flet.android]
icon = "assets/sentinelamobile.png"
adaptive_icon_background = "#111827"
adaptive_icon_foreground = "assets/sentinelamobile.png"
